/**
 * Trigger Tests for capacity discovery
 * 
 * Tests that verify the skill triggers on appropriate prompts
 * and does NOT trigger on unrelated prompts.
 */

import { TriggerMatcher } from "../../../../utils/trigger-matcher";
import { loadSkill, LoadedSkill } from "../../../../utils/skill-loader";

const SKILL_NAME = "microsoft-foundry/models/deploy-model/capacity";

describe("capacity - Trigger Tests", () => {
  let triggerMatcher: TriggerMatcher;
  let skill: LoadedSkill;

  beforeAll(async () => {
    skill = await loadSkill(SKILL_NAME);
    triggerMatcher = new TriggerMatcher(skill);
  });

  describe("Should Trigger", () => {
    const shouldTriggerPrompts: string[] = [
      "Find capacity for gpt-4o across regions",
      "Check quota availability for model deployment",
      "Where can I deploy gpt-4o?",
      "Capacity discovery for my model",
      "Best region for capacity",
      "Multi-project capacity search for gpt-4o",
      "Quota analysis for model deployment",
      "Check model availability in different regions",
      "Region comparison for gpt-4o capacity",
      "Check TPM availability for gpt-4o",
      "Which region has enough capacity for 10K TPM?",
      "Find best region for deploying gpt-4o with capacity",
    ];

    test.each(shouldTriggerPrompts)(
      'triggers on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(true);
        expect(result.matchedKeywords.length).toBeGreaterThanOrEqual(2);
      }
    );
  });

  describe("Should NOT Trigger", () => {
    const shouldNotTriggerPrompts: string[] = [
      "What is the weather today?",
      "Help me write a poem",
      "Explain quantum computing",
      "Help me with AWS SageMaker",
      "Configure my PostgreSQL database",
      "Deploy gpt-4o quickly",
      "Deploy with custom SKU",
      "Create an AI Foundry project",
      "Help me with Kubernetes pods",
      "Set up a virtual network in Azure",
      "How do I write Python code?",
    ];

    test.each(shouldNotTriggerPrompts)(
      'does not trigger on: "%s"',
      (prompt) => {
        const result = triggerMatcher.shouldTrigger(prompt);
        expect(result.triggered).toBe(false);
      }
    );
  });

  describe("Trigger Keywords Snapshot", () => {
    test("skill keywords match snapshot", () => {
      expect(triggerMatcher.getKeywords()).toMatchSnapshot();
    });

    test("skill description triggers match snapshot", () => {
      expect({
        name: skill.metadata.name,
        description: skill.metadata.description,
        extractedKeywords: triggerMatcher.getKeywords()
      }).toMatchSnapshot();
    });
  });

  describe("Edge Cases", () => {
    test("handles empty prompt", () => {
      const result = triggerMatcher.shouldTrigger("");
      expect(result.triggered).toBe(false);
    });

    test("handles very long prompt", () => {
      const longPrompt = "find capacity ".repeat(100);
      const result = triggerMatcher.shouldTrigger(longPrompt);
      expect(typeof result.triggered).toBe("boolean");
    });

    test("is case insensitive", () => {
      const result1 = triggerMatcher.shouldTrigger("CHECK CAPACITY FOR MODEL");
      const result2 = triggerMatcher.shouldTrigger("check capacity for model");
      expect(result1.triggered).toBe(result2.triggered);
    });
  });
});
