// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`capacity - Trigger Tests Trigger Keywords Snapshot skill description triggers match snapshot 1`] = `
{
  "description": "Discovers available Azure OpenAI model capacity across regions and projects. Analyzes quota limits, compares availability, and recommends optimal deployment locations based on capacity requirements.
USE FOR: find capacity, check quota, where can I deploy, capacity discovery, best region for capacity, multi-project capacity search, quota analysis, model availability, region comparison, check TPM availability.
DO NOT USE FOR: actual deployment (hand off to preset or customize after discovery), quota increase requests (direct user to Azure Portal), listing existing deployments.
",
  "extractedKeywords": [
    "across",
    "actual",
    "after",
    "analysis",
    "analyzes",
    "authentication",
    "availability",
    "available",
    "azure",
    "based",
    "best",
    "capacity",
    "check",
    "cli",
    "compares",
    "comparison",
    "customize",
    "deploy",
    "deployment",
    "deployments",
    "direct",
    "discovers",
    "discovery",
    "existing",
    "find",
    "hand",
    "increase",
    "limits",
    "listing",
    "locations",
    "model",
    "multi-project",
    "openai",
    "optimal",
    "portal",
    "preset",
    "projects",
    "quota",
    "recommends",
    "region",
    "regions",
    "requests",
    "requirements",
    "search",
    "user",
    "where",
  ],
  "name": "capacity",
}
`;

exports[`capacity - Trigger Tests Trigger Keywords Snapshot skill keywords match snapshot 1`] = `
[
  "across",
  "actual",
  "after",
  "analysis",
  "analyzes",
  "authentication",
  "availability",
  "available",
  "azure",
  "based",
  "best",
  "capacity",
  "check",
  "cli",
  "compares",
  "comparison",
  "customize",
  "deploy",
  "deployment",
  "deployments",
  "direct",
  "discovers",
  "discovery",
  "existing",
  "find",
  "hand",
  "increase",
  "limits",
  "listing",
  "locations",
  "model",
  "multi-project",
  "openai",
  "optimal",
  "portal",
  "preset",
  "projects",
  "quota",
  "recommends",
  "region",
  "regions",
  "requests",
  "requirements",
  "search",
  "user",
  "where",
]
`;
